@@ -1077,7 +1077,7 @@ if ActiveRecord::Base.connection.supports_migrations?
 
       protected
       def with_new_table
-        Person.connection.create_table :delete_me do |t|
+        Person.connection.create_table :delete_me, :force => true do |t|
           yield t
         end
       ensure
@@ -1086,4 +1086,210 @@ if ActiveRecord::Base.connection.supports_migrations?
 
     end # SexyMigrationsTest
   end # uses_mocha
+
+  uses_mocha 'ChangeTable migration tests' do
+    class ChangeTableMigrationsTest < ActiveRecord::TestCase
+      def setup
+        @connection = Person.connection
+        @connection.create_table :delete_me, :force => true do |t|
+        end
+      end
+
+      def teardown
+        Person.connection.drop_table :delete_me rescue nil
+      end
+
+      def test_references_column_type_adds_id
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, 'customer_id', :integer, {})
+          t.references :customer
+        end
+      end
+
+      def test_remove_references_column_type_removes_id
+        with_change_table do |t|
+          @connection.expects(:remove_column).with(:delete_me, 'customer_id')
+          t.remove_references :customer
+        end
+      end
+
+      def test_add_belongs_to_works_like_add_references
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, 'customer_id', :integer, {})
+          t.belongs_to :customer
+        end
+      end
+
+      def test_remove_belongs_to_works_like_remove_references
+        with_change_table do |t|
+          @connection.expects(:remove_column).with(:delete_me, 'customer_id')
+          t.remove_belongs_to :customer
+        end
+      end
+
+      def test_references_column_type_with_polymorphic_adds_type
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, 'taggable_type', :string, {})
+          @connection.expects(:add_column).with(:delete_me, 'taggable_id', :integer, {})
+          t.references :taggable, :polymorphic => true
+        end
+      end
+
+      def test_remove_references_column_type_with_polymorphic_removes_type
+        with_change_table do |t|
+          @connection.expects(:remove_column).with(:delete_me, 'taggable_type')
+          @connection.expects(:remove_column).with(:delete_me, 'taggable_id')
+          t.remove_references :taggable, :polymorphic => true
+        end
+      end
+
+      def test_references_column_type_with_polymorphic_and_options_null_is_false_adds_table_flag
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, 'taggable_type', :string, {:null => false})
+          @connection.expects(:add_column).with(:delete_me, 'taggable_id', :integer, {:null => false})
+          t.references :taggable, :polymorphic => true, :null => false
+        end
+      end
+
+      def test_remove_references_column_type_with_polymorphic_and_options_null_is_false_removes_table_flag
+        with_change_table do |t|
+          @connection.expects(:remove_column).with(:delete_me, 'taggable_type')
+          @connection.expects(:remove_column).with(:delete_me, 'taggable_id')
+          t.remove_references :taggable, :polymorphic => true, :null => false
+        end
+      end
+
+      def test_timestamps_creates_updated_at_and_created_at
+        with_change_table do |t|
+          @connection.expects(:add_timestamps).with(:delete_me)
+          t.timestamps
+        end
+      end
+
+      def test_remove_timestamps_creates_updated_at_and_created_at
+        with_change_table do |t|
+          @connection.expects(:remove_timestamps).with(:delete_me)
+          t.remove_timestamps
+        end
+      end
+
+      def string_column
+        if current_adapter?(:PostgreSQLAdapter)
+          "character varying(255)"
+        else
+          'varchar(255)'
+        end
+      end
+
+      def integer_column
+        if current_adapter?(:SQLite3Adapter) || current_adapter?(:SQLiteAdapter) || current_adapter?(:PostgreSQLAdapter)
+          "integer"
+        else
+          'int(11)'
+        end
+      end
+
+      def test_integer_creates_integer_column
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, :foo, integer_column, {})
+          @connection.expects(:add_column).with(:delete_me, :bar, integer_column, {})
+          t.integer :foo, :bar
+        end
+      end
+
+      def test_string_creates_string_column
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, :foo, string_column, {})
+          @connection.expects(:add_column).with(:delete_me, :bar, string_column, {})
+          t.string :foo, :bar
+        end
+      end
+
+      def test_column_creates_column
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, :bar, :integer, {})
+          t.column :bar, :integer
+        end
+      end
+
+      def test_column_creates_column_with_options
+        with_change_table do |t|
+          @connection.expects(:add_column).with(:delete_me, :bar, :integer, {:null => false})
+          t.column :bar, :integer, :null => false
+        end
+      end
+
+      def test_index_creates_index
+        with_change_table do |t|
+          @connection.expects(:add_index).with(:delete_me, :bar, {})
+          t.index :bar
+        end
+      end
+
+      def test_index_creates_index_with_options
+        with_change_table do |t|
+          @connection.expects(:add_index).with(:delete_me, :bar, {:unique => true})
+          t.index :bar, :unique => true
+        end
+      end
+
+      def test_change_changes_column
+        with_change_table do |t|
+          @connection.expects(:change_column).with(:delete_me, :bar, :string, {})
+          t.change :bar, :string
+        end
+      end
+
+      def test_change_changes_column_with_options
+        with_change_table do |t|
+          @connection.expects(:change_column).with(:delete_me, :bar, :string, {:null => true})
+          t.change :bar, :string, :null => true
+        end
+      end
+
+      def test_change_default_changes_column
+        with_change_table do |t|
+          @connection.expects(:change_column_default).with(:delete_me, :bar, :string)
+          t.change_default :bar, :string
+        end
+      end
+
+      def test_remove_drops_single_column
+        with_change_table do |t|
+          @connection.expects(:remove_column).with(:delete_me, [:bar])
+          t.remove :bar
+        end
+      end
+
+      def test_remove_drops_multiple_columns
+        with_change_table do |t|
+          @connection.expects(:remove_column).with(:delete_me, [:bar, :baz])
+          t.remove :bar, :baz
+        end
+      end
+
+      def test_remove_index_removes_index_with_options
+        with_change_table do |t|
+          @connection.expects(:remove_index).with(:delete_me, {:unique => true})
+          t.remove_index :unique => true
+        end
+      end
+
+      def test_rename_renames_column
+        with_change_table do |t|
+          @connection.expects(:rename_column).with(:delete_me, :bar, :baz)
+          t.rename :bar, :baz
+        end
+      end
+
+      protected
+      def with_change_table
+        Person.connection.change_table :delete_me do |t|
+          yield t
+        end
+      end
+
+    end # ChangeTable test
+  end # uses_mocha
+
 end
